--- a/index.html
+++ b/index.html
@@ -466,7 +466,7 @@
                     <h3>Java Edition</h3>
                     <p>Untuk PC/Mac/Linux</p>
                     <div class="server-ip">rimbapixel.net:19102</div>
-                    <p>Version: 1.20.x</p>
+                    <p>Version: 1.9-1.2x.x</p>
                 </div>
                 
                 <div class="server-card">
