--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
             
             <div class="stats-grid">
                 <article class="stat-card">
-                    <div class="stat-number">5+</div>
+                    <div class="stat-number">5++</div>
                     <div class="stat-label">Registered Players</div>
                 </article>
                 
