--- a/index.html
+++ b/index.html
@@ -937,7 +937,7 @@
             
             <div class="stats-grid">
                 <article class="stat-card">
-                    <div class="stat-number">5++</div>
+                    <div class="stat-number">10+</div>
                     <div class="stat-label">Registered Players</div>
                 </article>
                 
@@ -980,7 +980,7 @@
                 <div class="footer-section">
                     <h3>Server Info</h3>
                     <p>IP: rimbapixel.net:19102</p>
-                    <p>Version: 1.20.x</p>
+                    <p>Version: 1.9.x-1.2x.x</p>
                     <p>Type: Survival RPG</p>
                     <p>Platform: Java & Bedrock</p>
                 </div>
