--- a/index.html
+++ b/index.html
@@ -632,7 +632,7 @@
                     <i class="fas fa-desktop" aria-hidden="true"></i>
                     <h3>Java Edition</h3>
                     <div class="server-ip">rimbapixel.net:19102</div>
-                    <p>Version: 1.20.x</p>
+                    <p>Version: 1.9.x-1.2x.x</p>
                     <p>Cross Platform Support</p>
                 </article>
                 
@@ -1086,7 +1086,7 @@
                     current = target;
                     clearInterval(timer);
                 }
-                element.textContent = Math.floor(current) + (target > 100 ? '+' : '');
+                element.textContent = Math.floor(current) + (target > 10 ? '+' : '');
             }, 16);
         }
 
