--- a/index.html
+++ b/index.html
@@ -942,7 +942,7 @@
                 </article>
                 
                 <article class="stat-card">
-                    <div class="stat-number">24/7</div>
+                    <div class="stat-number">24*7</div>
                     <div class="stat-label">Server Uptime</div>
                 </article>
                 
