--- a/index.html
+++ b/index.html
@@ -938,7 +938,7 @@
             <div class="stats-grid">
                 <article class="stat-card">
                     <div class="stat-number">10+</div>
-                    <div class="stat-label">Registered Players 10+</div>
+                    <div class="stat-label">Players 10+</div>
                 </article>
                 
                 <article class="stat-card">
@@ -957,7 +957,7 @@
                 </article>
                 
                 <article class="stat-card">
-                    <div class="stat-number">Java Bedrock</div>
+                    <div class="stat-number">All</div>
                     <div class="stat-label">1.9.x-1.2x.x</div>
                 </article>
             </div>
