--- a/test/index.html
+++ b/test/index.html
@@ -103,13 +103,14 @@
     <script>
         // Firebase Configuration - GANTI dengan config Anda sendiri!
         const firebaseConfig = {
-            apiKey: "demo-api-key-ganti-dengan-milik-anda",
-            authDomain: "demo-project.firebaseapp.com", 
-            databaseURL: "https://demo-project-default-rtdb.asia-southeast1.firebasedatabase.app",
-            projectId: "demo-project",
-            storageBucket: "demo-project.appspot.com",
-            messagingSenderId: "123456789",
-            appId: "1:123456789:web:abcdef123456"
+          apiKey: "AIzaSyD8WV6vO3U4NyA2sC48xIAT5Ytgf0q1Rko",
+          authDomain: "phishing-simulation-tool.firebaseapp.com",
+          databaseURL: "https://phishing-simulation-tool-default-rtdb.asia-southeast1.firebasedatabase.app",
+          projectId: "phishing-simulation-tool",
+          storageBucket: "phishing-simulation-tool.firebasestorage.app",
+          messagingSenderId: "1010560842745",
+          appId: "1:1010560842745:web:ce56800bbe1a0cacfc9b28",
+          measurementId: "G-MVENNB90ZX"
         };
         
         // Initialize Firebase (hanya jika config valid)
